# DataEngine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: azure-kubernetes-service-helm.yml  docker-image.yml  rust.yml
DataEngine/templates/: _helpers.tpl  configmap.yaml  service.yaml
data-engine-helm/: Chart.yaml
data-engine-helm/templates/: configmap.yaml  deployments.yaml  headless-service.yaml  secret.yaml  statefulset.yaml
hostbuilder/: Cargo.toml
hostbuilder/src/: config.rs  endpoint.rs  get_info.rs  lib.rs
hostbuilder/src/handlers/: mod.rs
hostbuilder/src/handlers/rest/: kraken_rest_api.rs  mod.rs
hostbuilder/src/handlers/structs/: responses.rs
hostbuilder/src/handlers/websockets/: kraken_websocket_handler.rs  mod.rs
program/: Cargo.toml
program/src/: main.rs
