[package]
name = "hostbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
base64 = "0.22.1"
bigdecimal = { version = "0.4.5", features = ["serde"] }
config = "0.14.0"
chrono = { version = "0.4.19", features = ["serde"] }
databaseschema = { path = "../../DatabaseEngine/databaseschema" }
deadpool = "0.12.1"
deadpool-redis = { version = "0.15.1", features = ["serde"] }
diesel = { version = "2.2.2", features = ["chrono", "uuid", "numeric"] }
diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
hmac = "0.12.1"
mockall = "0.12.1"
prost = "0.13.1"
protocol = { path = "../../MessageBrokerEngine/protocol" }
publisher = { path = "../../MessageBrokerEngine/publisher" }
redis = { version = "0.25.4", features = ["tokio-native-tls-comp"] }
redis_utils = { path = "../../RedisUtils" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = "0.1.40"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[build-dependencies]
prost-build = "0.13.1"
